testing CI/CD with new Image size